syntax = "proto3";
package pb;
option  go_package = "internal/pb";

message Category {
    string id = 1;
    string name = 2;
    string description = 3;
}

// ----- CREATE
message CreateCategoryRequest {
    string name = 1;
    string description = 2;
}

// ----- LIST
message blank {}
message ListCategoriesResponse {
    repeated Category categories = 1;
}

// ----- GET
message GetCategory {
    repeated Category categories = 1;
}

message GetCategoryRequest {
    string id = 1;
}


service CategoryService {
    rpc CreateCategory(CreateCategoryRequest) returns (Category) {};
    rpc CreateCategoryStream(stream CreateCategoryRequest) returns (ListCategoriesResponse) {};
    rpc CreateCategoryStreamBidirectional(stream CreateCategoryRequest) returns (stream Category) {};
    rpc ListCategories(blank) returns (ListCategoriesResponse) {};
    rpc GetCategory(GetCategoryRequest) returns (Category) {};
}
